tests/baselines/reference/newNonReferenceType.errors.txt
==== tests/cases/compiler/newNonReferenceType.ts (2 errors) ====
    var a = new any();
                ~~~
!!! error TS2095: Could not find symbol 'any'.
    var b = new boolean(); // error
                ~~~~~~~
!!! error TS2095: Could not find symbol 'boolean'.
    